--- a/source/Makefile.in
+++ b/source/Makefile.in
@@ -68,7 +68,7 @@ VERSION = @VERSION@
 
 ####### kdevelop will overwrite this part!!! (end)############
 bin_PROGRAMS = asc
-asc_SOURCES = soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp 
+asc_SOURCES = soundList.cpp weather.cpp typen.cpp strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp newfont.cpp network.cpp missions.cpp misc.cpp loadpcxc.cpp loadjpg.cpp loaders.cpp loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp building.cpp basestrm.cpp basegfx.cpp attack.cpp unitctrl.cpp
 asc_LDADD = ./sdl/libsdl.a ./libs/triangul/libtriangul.a -lSDL -lpthread -lbz2
 
 SUBDIRS = docs sdl libs 
@@ -87,7 +87,7 @@ LIBS = @LIBS@
 asc_OBJECTS =  soundList.o weather.o typen.o strtmesg.o stack.o spfst.o \
 sgstream.o sg.o pd.o palette.o newfont.o network.o missions.o misc.o \
 loadpcxc.o loadjpg.o loaders.o loadbi3.o gui.o gamedlg.o dlg_box.o \
-dialog.o controls.o building.o basestrm.o basegfx.o attack.o
+dialog.o controls.o building.o basestrm.o basegfx.o attack.o unitctrl.o
 asc_DEPENDENCIES =  ./sdl/libsdl.a ./libs/triangul/libtriangul.a
 asc_LDFLAGS = 
 CXXFLAGS = @CXXFLAGS@
